# penr-oz-crypto-token-coin

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pytest.yml
blockchain_service/: main.py  test_service.py
miner_service/: main.py
shared/: __init__.py  api_paths.py  contracts.py  evaluation_policy.py
shared/models/: __init__.py  ai_work.py  wallet.py
tests/: test_evaluation_policy.py  test_integration.py  test_shared.py
transaction_service/: main.py  test_service.py
wallet_service/: main.py  test_service.py
