[tool.poetry]
name = "penr-oz-crypto-token-coin"
version = "0.1.0"
description = "Mini crypto project with FastAPI microservices"
authors = ["team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
ruff = "^0.9.0"
flake8 = "^7.0.0"
black = "^24.0.0"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
